syntax = "proto3";

package service.pb;

import "github.com/plgd-dev/client-application/pb/misc.proto";

option go_package = "github.com/plgd-dev/client-application/pb;pb";


message GetResourceRequest {
  ResourceId resource_id = 1;
}

message GetResourceResponse {
  Content content = 1;
}
